Partial fix to dragleave fired when hovering a child card in cells http://stackoverflow.com/questions/7110353/html5-dragleave-fired-when-hovering-a-child-element

--- a/source/shared/taskboard/taskboard.css
+++ b/source/shared/taskboard/taskboard.css
@@ -95,6 +95,10 @@
     border: 1px solid white;
 }
 
+#taskboard .cell.over * {
+    pointer-events: none;
+}
+
 #taskboardtable {
     /*border: 2px solid #fff;*/
     background-color: white;
